--- a/EOECBarcodeDialogs/DialogStrings_pl_PL.properties
+++ b/EOECBarcodeDialogs/DialogStrings_pl_PL.properties
@@ -94,7 +94,7 @@ title=Barcode
 901.HeightModify.StringItemList=100
 902.Barcode.HeightModify.Text=100
 903.Barcode.FrameControl1.HelpText=
-904.Barcode.FrameControl1.Label=Po\u0142o\u017aenie
+904.Barcode.FrameControl1.Label=Po\u0142o\u017cenie
 907.Barcode.MassDisabled.HelpText=
 908.Barcode.MassDisabled.Label=Only one value
 913.Barcode.MultipleText.HelpText=
