--- a/EOECBarcodeDialogs/DialogStrings_pl_PL.properties
+++ b/EOECBarcodeDialogs/DialogStrings_pl_PL.properties
@@ -13,7 +13,7 @@
 660.Barcode.BarcodeType.Label=Typ kodu kreskowego
 663.Barcode.EAN13.HelpText=
 664.Barcode.EAN13.Label=EAN-13
-675.Barcode.Bookland.HelpText=ISBN-13 barcode from ISBN-10. Also known as Bookland.
+675.Barcode.Bookland.HelpText=ISBN-13 barcode from ISBN-10. Znany jako Bookland.
 676.Barcode.Bookland.Label=ISBN-13 from ISBN-10
 685.Barcode.UPCA.HelpText=
 686.Barcode.UPCA.Label=UPC-A
